--- a/javascript/json/index.html
+++ b/javascript/json/index.html
@@ -9,6 +9,7 @@
 </body>
 <script src="./isJson.js"></script>
 <script>
+    //判断传入数据是否为json数据
     console.log(isJson(0))
     console.log(isJson(undefined))
     console.log(isJson(null))
