--- a/javascript/html/index.html
+++ b/javascript/html/index.html
@@ -11,7 +11,7 @@
 </body>
 <script src="escapeHtml.js"></script>
 <script>
-    // 转译html字符串，防止XSS攻击
+    // 转译html字符串，防止XSS攻击。只能预防在使用innerHTML时出现问题
     /*
     * 参数1：html字符串
     * 参数2：Boolean,是否让回车替换成<br/>,空格替换成&nbsp;从而显示出多空格和换行效果
