--- a/javascript/deepCopy/index.html
+++ b/javascript/deepCopy/index.html
@@ -10,8 +10,9 @@
 <script src="./deepCopy.js"></script>
 <script>
     //深层复制数据(递归调用实现，可复制互相引用或引用自身的对象)
-    //数组和对象会深层复制，其他数据都是直接赋值，
-    //包括null，undefined，function，regExp，date，htmlElement(通过js获取到的html元素对象或者集合)
+    //只复制对象自身属性
+    //深层复制包括：Array,Object,Arguments(复制为数组),Date,RegExp,String,Number,Boolean
+    //其他类型直接返回该数据包括null，undefined，function，htmlElement(通过js获取到的html元素对象或者集合)
 
     var obj1 = {
         obj: null,
@@ -43,6 +44,18 @@
     // arr[0].a=2;
     console.log(arr);
     console.log(deepCopy(arr_copy));
+
+    function Test() {
+        this.name = 'test';
+    }
+
+    Test.prototype.a = 1;
+    Test.prototype.b = () => {
+    };
+    var test = new Test();
+    console.log(test)
+    console.log(deepCopy(test))
+
 
 </script>
 </html>
